package sokoban.model;

import javafx.beans.property.BooleanProperty;
import javafx.beans.property.SimpleBooleanProperty;

 abstract class Board {




    private BooleanProperty isChanged = new SimpleBooleanProperty(false);



    public  Board() {
    }

    public Board(int width, int height) {
    }




      void play(int line, int col)
      {

      }














}
