package sokoban.model;

public enum ElementType {
    joueur,mur,terrain,cible,caisse,mushroom,murTraversable
}
